[package]
name = "fastfec"
version = "0.1.0"
authors = ["Rasmus Melchior Jacobsen <rmja@laesoe.org>"]
edition = "2021"
repository = "https://github.com/rmja/fastfec"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = [
    "fec",
    "convolutional-code",
    "turbo-code"
]
description = """
Fast implmentations of various forward error correction algorithms optimized for embedded systems.
"""

[dependencies]
